--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             margin-bottom: 20px;
             border: 5px solid #e0d2c3;
         }
+        @media (max-width: 600px) {
+            .profile-image {
+                max-width: 200px;
+                border-width: 3px;
+            }
+        }
         h1 {
             font-size: 2em;
             color: #5e3b29;
