--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <h2>למה לבחור בי?</h2>
             <p>עם ניסיון עשיר בתחום וגישת עבודה אישית, אני מסייעת ללקוחותיי להגיע להצלחה כלכלית וביטחון עסקי. ההבנה שלי בשילוב עם הכלים המקצועיים שלי מאפשרים לי להעניק לך את המענה המושלם.</p>
         </div>
-        <a href="https://wa.me/972504262233" target="_blank">שלח/י הודעה ב- <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon"> WhatsApp</a>
+        <a href="https://wa.me/972504262233?text=%D7%94%D7%99%D7%99%20%D7%A0%D7%95%D7%A2%D7%94,%20%D7%94%D7%92%D7%A2%D7%AA%D7%99%20%D7%9E%D7%94%D7%A2%D7%9E%D7%95%D7%93%20%D7%90%D7%A9%D7%9E%D7%97%20%D7%9C%D7%A8%D7%95%D7%90%D7%AA%20%D7%97%D7%A9%D7%91%D7%95%D7%9F%20:%29" target="_blank">שלח/י הודעה ב- <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon"> WhatsApp</a>
     </div>
     <footer>
         &copy; 2025 נועה דבוש ינאי - רואת חשבון. כל הזכויות שמורות.
